<resources>
    <string name="app_name">ReDiCom</string>
    <string name="title_activity_main" />

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ReDiCom</string>
    <string name="nav_header_subtitle">NIST Project 70NANB17H188</string>
    <!--<string name="nav_header_desc">Navigation header</string>-->
    <string name="nav_messaging">Messaging</string>
    <string name="nav_work_offload">Work Offloading</string>
    <string name="nav_link">Link Layer</string>
    <string name="nav_gossip">Store &amp; Forward</string>
    <string name="nav_routing">Routing</string>
    <string name="nav_naming">Naming Layer</string>
    <string name="nav_log">Log</string>

    <string name="log_top">Move to top in the log view</string>
    <string name="link_wifi_direct_short">WiFi-D: </string>
    <string name="link_bluetooth_short">BT: </string>
    <string name="link_wifi_group_name">SSID:</string>
    <string name="link_group_pass">Pass:</string>
    <string name="link_wifi_discovery_status">Status of Wifi Discovery. Green: discovering; red: stopped.</string>
    <string name="link_bluetooth_discovery_status">Status of Bluetooth Discovery. Green: discovering; red: stopped.</string>
    <string name="link_link_status">Status of the link. Green: connected; orange: not connected; red: not found.</string>
    <string name="link_not_found">Not\nfnd.</string>
    <string name="link_found">Not\nconn.</string>
    <string name="link_connected">Link\nconn.</string>
    <string name="link_established">TCP\nconn.</string>
    <string name="link_invited">Inv-\nited</string>
    <string name="link_not_found_icon">Icon indicating that a link is not found.</string>
    <string name="link_found_icon">Icon indicating that a link has been discovered, but not connected.</string>
    <string name="link_connected_icon">Icon indicating that a connection has been established on the link but TCP connection still not established.</string>
    <string name="link_established_icon">Icon indicating that a TCP connection has been established on this link.</string>
    <string name="link_confusing_characters">[Il10O]</string>
    <string name="link_btn_connect">Click to connect to/disconnect from a device.</string>

    <string name="name_tab_namespace">Namespace</string>
    <string name="name_tab_pubsub">Pub/Sub</string>
    <string name="name_tab_routing">Routing</string>

    <string name="work_offload_nothing">This device does not have work offload</string>
    <string name="work_offload_task_id">"Task ID: "</string>
    <string name="work_offload_state">"State: "</string>
    <string name="work_offload_master_result">"Result: "</string>
    <string name="work_offload_duration">"Duration: "</string>
    <string name="work_offload_master_available">Available</string>
    <string name="work_offload_master_working">Working</string>
    <string name="work_offload_master_finished">Finished</string>
    <string name="work_offload_master_state_idle">Idle</string>
    <string name="work_offload_master_state_wait_for_response">Waiting for slaves&#8230;</string>
    <string name="work_offload_master_state_distribute_work">Distributing work&#8230;</string>
    <string name="work_offload_master_state_wait_for_result">Waiting for results&#8230;</string>
    <string name="work_offload_master_state_compute_result">Completing task&#8230;</string>
    <string name="work_offload_master_start_start">Start</string>
    <string name="work_offload_master_start_stop">Cancel</string>
    <string name="work_offload_master_offload_local">Local</string>
    <string name="work_offload_master_offload_offload">Offload</string>
    <string name="work_offload_master_no_slave_text">Cannot find slaves. Give up task!</string>
    <string name="work_offload_application_facial">Facial Recognition</string>
    <string name="work_offload_application_matrix">Matrix Multiplication</string>
    <string name="work_offload_application_big">BIG</string>
    <string name="work_offload_application_small">SMALL</string>
    <string name="work_offload_slave_state_idle">Idle</string>
    <string name="work_offload_slave_state_wait_for_work">Waiting for work&#8230;</string>
    <string name="work_offload_slave_state_working">Working&#8230;</string>
    <string name="work_offload_slave_my_name">"My Name: "</string>
    <string name="work_offload_slave_master_name">"Master Name: "</string>
    <string name="work_offload_slave_enabled">Enabled</string>
    <string name="work_offload_slave_disabled">Disabled</string>

    <string name="gossip_fixed">Fixed</string>
    <string name="gossip_random">Random</string>
    <string name="gossip_store">Store</string>
    <string name="gossip_non_store">No Store</string>
    <string name="gossip_add_msg">Add</string>
    <string name="gossip_digest">Digest</string>
    <string name="gossip_nonce">Nonce</string>
    <string name="gossip_msg">Message</string>

    <string name="naming_ancestors">Ancestors</string>
    <string name="naming_parents">Parents</string>
    <string name="naming_siblings">Siblings</string>
    <string name="naming_children">Children</string>
    <string name="naming_descendants">Descendants</string>
    <string name="naming_namespace_net">NET</string>
    <string name="naming_namespace_messaging">MSG</string>

    <string name="millisecond">ms</string>

    <string name="messaging_dst_input_hint">Search for target role&#8230;</string>
    <string name="messaging_dst">Target:</string>
    <string name="messaging_push_to_record">Push to record&#8230;</string>
    <string name="messaging_release_to_send">Release to send&#8230;</string>
    <string name="messaging_text">Input message here&#8230;</string>
    <string name="messaging_auto_play_description">Turn auto play on/off.</string>
    <string name="messaging_type_description">Switch between P&amp;T and MSG.</string>
    <string name="messaging_text_notification">Select a role to send messages</string>
    <string name="messaging_to_description">The left name sends the message to the right name.</string>
    <string name="messaging_attach_description">The message has attached names.</string>
    <string name="messaging_clear_description">Clear all the messages.</string>

    <string name="routing_txt_dst">DST Name: </string>
    <string name="routing_txt_my">My Name: </string>
    <string name="routing_txt_size">Send Size:</string>
    <string name="routing_input_size_hint">Size to send (B)&#8230;</string>
    <string name="routing_btn_send_description">Press button to send.</string>
</resources>
