<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.link.LinkFragment">


    <LinearLayout
        android:id="@+id/link_group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/link_wifi_group_name" />

        <TextView
            android:id="@+id/link_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:padding="3dp"
            tools:text="Il1O0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_group_pass" />

        <TextView
            android:id="@+id/link_group_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:padding="3dp"
            tools:text="Il1O0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="end"
            android:padding="3dp"
            android:text="@string/link_confusing_characters" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/link_links"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/link_not_found_icon"
            android:padding="3dp"
            android:src="@drawable/ic_circle_red" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_not_found" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/link_found_icon"
            android:padding="3dp"
            android:src="@drawable/ic_circle_yellow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_found" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/link_found_icon"
            android:padding="3dp"
            android:src="@drawable/ic_circle_magenta" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_invited" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/link_connected_icon"
            android:padding="3dp"
            android:src="@drawable/ic_circle_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_connected" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/link_established_icon"
            android:padding="3dp"
            android:src="@drawable/ic_circle_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_established" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/link_wifi_direct_short" />

        <TextView
            android:id="@+id/link_wifi_discover_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:paddingEnd="3dp"
            tools:text="--:--:--.---" />


        <ImageView
            android:id="@+id/link_wifi_discovery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/link_wifi_discovery_status"
            android:padding="3dp"
            android:src="@drawable/ic_circle_red" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/link_bluetooth_short" />

        <TextView
            android:id="@+id/link_bluetooth_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp" />

        <ImageView
            android:id="@+id/link_bluetooth_discovery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/link_bluetooth_discovery_status"
            android:padding="3dp"
            android:src="@drawable/ic_circle_red" />

    </LinearLayout>


</LinearLayout>