<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.net.GossipFragment">

    <TextView
        android:id="@+id/gossip_connected_neighbors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingTop="5dp"
        android:paddingEnd="3dp"
        android:paddingBottom="5dp"
        tools:text="Neighbors: " />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gossip_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gossip_add_msg" />

        <ToggleButton
            android:id="@+id/gossip_fixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/gossip_random"
            android:textOn="@string/gossip_fixed" />

        <ToggleButton
            android:id="@+id/gossip_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/gossip_non_store"
            android:textOn="@string/gossip_store" />

        <TextView
            android:id="@+id/gossip_counts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:padding="4dp"
            android:textAlignment="textEnd" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/gossip_digest"
            android:textAlignment="center"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/gossip_nonce"
            android:textAlignment="center"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/gossip_msg"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/gossip_message_buffer_scroll_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_log_top"
            android:theme="@style/AppTheme"
            app:fabSize="mini" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gossip_message_buffer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gossip_digest"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/gossip_blacklist_scroll_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_log_top"
            android:theme="@style/AppTheme"
            app:fabSize="mini" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gossip_blacklist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>